sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: ';' expected but '(' found.
{var lm : getValeur(i);
                   ^AlgInsertionSort:7: error: '<-' expected but '=' found.
for(j=i; j>0 && tab[j-1] > elem; j++)
     ^AlgInsertionSort:7: error: illegal start of simple expression
for(j=i; j>0 && tab[j-1] > elem; j++)
       ^AlgInsertionSort:7: error: ']' expected but identifier found.
for(j=i; j>0 && tab[j-1] > elem; j++)
                     ^AlgInsertionSort:7: error: '<-' expected but ';' found.
for(j=i; j>0 && tab[j-1] > elem; j++)
                               ^AlgInsertionSort:7: error: illegal start of simple pattern
for(j=i; j>0 && tab[j-1] > elem; j++)
                                    ^AlgInsertionSort:11: error: illegal start of simple expression
}
^